<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_filters"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@drawable/shadow_rectangle"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pendingClicked"
            android:text="@string/pending" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="CompletedClicked"
            android:text="@string/completed" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="AcceptedClicked"
            android:text="@string/accepted" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:id="@+id/deliveredCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="DeliveredClicked"
            android:text="@string/delivered" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="CancelledClicked"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>