<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sanjay.sharedtrasition.ScrollingActivity">
    <item
        android:id="@+id/disable"
        android:orderInCategory="100"
        android:title="@string/disable_food"
        android:iconTint="@color/yello"
        android:icon="@drawable/disable_food"
        app:showAsAction="never" />
    <item
        android:id="@+id/enable"
        android:icon="@drawable/foodlists"
        android:orderInCategory="100"
        android:title="@string/enable_food"
        android:iconTint="@color/yello"
        app:showAsAction="never" />
    <item
        android:id="@+id/remove"
        android:icon="@drawable/ic_delete_black_24dp"
        
        android:orderInCategory="100"
        android:title="@string/remove_food"
        app:showAsAction="never" />

</menu>
