<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#fff"
                android:foregroundTint="#fff"
                android:onClick="endActivity"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
 >

                <ImageView
                    android:id="@+id/image_message_profile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shadow"
                     android:layout_alignParentTop="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/user" />

                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="11dp"
                    android:layout_toEndOf="@id/image_message_profile"
                    android:text="@string/loading"
                    android:textColor="#000"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                      android:layout_below="@id/UserName"
                     android:textColor="#000"
                     android:drawableTint="@color/yello"
                    android:layout_marginTop="3dp"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/phone"
                    android:layout_marginStart="5dp"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"

                    android:layout_marginTop="11dp"
                     android:layout_marginStart="10dp" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="60dp"
       android:background="@drawable/shadow"
        android:id="@+id/img1"
         android:scaleType="fitXY"
        android:layout_height="60dp" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/shadow"
            android:scaleType="fitXY"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/shadow"
            android:scaleType="fitXY"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/shadow"
            android:scaleType="fitXY"
            android:visibility="gone" />

        <TextView
            android:id="@+id/morefood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#000"
            android:textSize="18sp" />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@android:drawable/alert_light_frame"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/OrderNo"
            android:textColor="#000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/orderno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
             android:textColor="#000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/alert_light_frame"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/Delivery"
            android:textColor="#000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/deliverytime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
             android:textColor="#000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/alert_light_frame"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/date"
            android:textColor="#000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/orderdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_gravity="center_horizontal"
             android:textColor="#000"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="Total Food"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Totalfood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="6"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="Total Amount"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="Payment"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Extrapay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
    <Button
        android:layout_width="match_parent"
         android:text="@string/payextra"
         android:id="@+id/payextrabutton"
        android:textColor="#fff"
        style="@android:style/Widget.Material.Light.Button"
        android:backgroundTint="@color/yello"
        android:layout_alignParentBottom="true"
        android:onClick="payextraClicked"
        android:visibility="gone"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/progressrelative"
        android:layout_width="match_parent"
         android:layout_height="match_parent"
        android:background="#fff"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>