<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/helpConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"

    android:fitsSystemWindows="true"
    >
<ProgressBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/progressbar"
    />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_alignParentTop="true"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/end"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="150dp"
                     android:background="#00ffffff"
                     android:layout_gravity="center"
                     app:srcCompat="@drawable/back"
                    android:paddingEnd="12dp"
                     android:paddingStart="0dp" />

                <ImageView
                    android:id="@+id/mainimage"
                     android:layout_width="40dp"
                    android:background="@drawable/circular_drawable"
                    android:layout_height="40dp"
                    android:layout_marginStart="-150dp"
                   />

                <TextView
                    android:id="@+id/toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/canteen"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reyclerview_message_list"
        android:layout_width="match_parent"
        android:layout_below="@id/appbar"
        android:layout_above="@id/relative"
        android:layout_height="match_parent"
         android:layout_marginBottom="11dp"
        android:background="#00ffffff">

    </android.support.v7.widget.RecyclerView>

      <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
         android:background="#00ffffff">


        <!-- A horizontal line between the chatbox and RecyclerView -->
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@+id/layout_chatbox"
            android:layout_marginBottom="0dp"
            android:background="#dfdfdf" />

        <LinearLayout
            android:id="@+id/layout_chatbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/chat_body"
            android:maxWidth="12dp"
            android:minHeight="58dp"

            android:orientation="horizontal"

            >

            <EditText
                android:id="@+id/edittext_chatbox"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"

                android:layout_marginStart="27dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/say_something"
                android:maxLines="4" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/button_send_message"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginTop="1dp"
                    android:scaleType="center"
                    android:background="@drawable/sebd_background"
                    app:srcCompat="@drawable/add_color" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relative"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_button_transparent"
        android:elevation="3dp"

        android:visibility="invisible">

        <RelativeLayout
            android:id="@+id/color"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"

                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/relateCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    >

                    <ImageButton
                        android:id="@+id/camera"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circular_two_colors_one"
                        app:srcCompat="@drawable/camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/camera"
                        android:layout_marginTop="5dp"
                        android:text="@string/camera" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relateGallery"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                     android:layout_marginStart="50dp">

                    <ImageButton
                        android:id="@+id/gallery"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circular_two_colors"
                        app:srcCompat="@drawable/gallery" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/gallery"

                        android:layout_marginTop="5dp"
                        android:text="Gallery" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relateOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp">

                    <ImageButton
                        android:id="@+id/order"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circular_two_colors_three"
                        app:srcCompat="@drawable/ic_add_shopping_cart_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/order"

                        android:layout_marginTop="5dp"
                        android:text="@string/OrderNo" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:id="@+id/frameLayoutHelp"
         android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:visibility="gone">

    </FrameLayout>
</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>